# ALRPD

./: README.md  pyproject.toml
.github/workflows/: publish.yml
alprd/: __init__.py
data/: mars_heliocentric.txt  moon_geocentric.txt  pas_bhz_vel.txt  pas_hnz_acc.txt  pasc_hhz_vel.mseed  pasc_hnz_acc.mseed
docs/: PAPER_DRAFT.md  PAPER_OUTLINE.md  RESEARCH_LOG.md
results/: results_v1.csv  results_v1_1.csv  results_v1_2.csv  results_v1_3.csv  results_v1_4.csv  results_v2_0.csv  results_v2_0_external.csv  results_v2_1.csv  results_v2_1_realdata.csv  results_v2_2_seismic.csv  scaling_v1_1.json  scaling_v1_2.json  scaling_v1_3.json
src/: __init__.py  bench_external.py  bench_realdata.py  bench_seismic.py  benchmark.py  datasets.py  methods.py
tests/: test_methods.py
