[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alprd"
version = "2.2.0"
description = "Adaptive Local Polynomial Regression Differentiation framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics"
  ]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0"
]